# jpeg2rgb

./: CMakeLists.txt  LICENSE  README.md
include/: jpeg_file.h  rgb_file.h
modules/: FindTurboJPEG.cmake
src/: jpeg_file.c  main.c  rgb_file.c
